fix for modal, header dark theme and avax name on wrap

--- a/src/index.css
+++ b/src/index.css
@@ -58,8 +58,14 @@ body.dark-theme .credit .name {
   color: white;
 }
 
-body.dark-theme .ava-eth-logo {
+body.dark-theme .chain-bridge-sub-logo {
   color: white;
+}
+
+body.dark-theme .ava-eth-logo {
+  text-shadow: -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white,
+    1px 1px 0 white;
+  color: black;
 }
 
 .basic-box-shadow {
